Exams/exam_18.12.04/ititkov/ft_print_numbers/0-0-ft_print_numbers.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z3r3p21.42.us.org
Darwin 17.4.0 x86_64
$> date
Tue Dec  4 09:25:24 PST 2018
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.4.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2018/c-exam-alone-in-the-dark-beginner/exam_20181204/ititkov

= Git history ==================================================================
$> git -C /var/folders/4h/psvf4p_n2rs5xl2663frt8tr0000gp/T/tmpiNxFSF/user log --pretty='%H - %an, %ad : %s'
054a327ca9c9de2745013c82707054c5a3d3f7b4 - Exam 42, Tue Dec 4 09:22:40 2018 -0800 : ft_print_numbers
 
= Collected files ==========================================
$> ls -lAR /var/folders/4h/psvf4p_n2rs5xl2663frt8tr0000gp/T/tmpiNxFSF/user
total 8
-rw-r--r--  1 deepthought  deepthought  240 Dec  4 09:25 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Dec  4 09:25 ft_print_numbers

/var/folders/4h/psvf4p_n2rs5xl2663frt8tr0000gp/T/tmpiNxFSF/user/ft_print_numbers:
total 8
-rw-r--r--  1 deepthought  deepthought  953 Dec  4 09:25 ft_print_numbers.c
 
= ft_print_numbers =============================================================
$> gcc -Wextra -Wall -Werror main.c ft_print_numbers.c -o user_exe 
ft_print_numbers.c:15:2: error: implicit declaration of function 'write' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        write(1, "0123456789", 10);
        ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
